--- a/inquiry.html
+++ b/inquiry.html
@@ -89,7 +89,7 @@
                     </ul>
                 </div>
                 <div class="clear"></div>
-                <p class="footer-text">本サイトを構成するすべての資料についてのすべての権利、権原、権益は本サイト運営者および第三者のライセンス許諾者に帰属します。<br>© 2022 HitoriYuu</p>
+                <p class="footer-text">本サイトを構成するすべての資料についてのすべての権利、権原、権益は本サイト運営者および第三者のライセンス許諾者に帰属します。<br>&copy; 2022 HitoriYuu</p>
             </div>
         </div>
     </div>
