[NEW] 1.0.2 [EDIT] commands.html 各部分のコマンドの使用方法を変更

--- a/commands.html
+++ b/commands.html
@@ -112,7 +112,7 @@
                                 <h2>/docs</h2>
                                 <p>discord.jsのドキュメントから検索します。</p>
                                 <div class="info">
-                                    <p>使用方法:<a class="info-sub">/docs &lt;任意の文字列&gt;</a></p>
+                                    <p>使用方法:<a class="info-sub">/docs &lt;検索&gt;</a></p>
                                     <p>実行に必要な権限:<a class="info-sub">誰でも実行可能</a></p>
                                 </div>
                             </div>
@@ -224,7 +224,7 @@
                                 <h2>/say</h2>
                                 <p>任意の文字列をボットに言わせます。</p>
                                 <div class="info">
-                                    <p>使用方法:<a class="info-sub">/say &lt;任意の文字列&gt;</a></p>
+                                    <p>使用方法:<a class="info-sub">/say &lt;言わせたい言葉&gt;</a></p>
                                     <p>実行に必要な権限:<a class="info-sub">誰でも実行可能</a></p>
                                 </div>
                             </div>
@@ -248,7 +248,7 @@
                                 <h2>/dice</h2>
                                 <p>ダイスを振ります。</p>
                                 <div class="info">
-                                    <p>使用方法:<a class="info-sub">/dice &lt;任意の数字(回数)&gt; &lt;任意の数字(面数)&gt;</a></p>
+                                    <p>使用方法:<a class="info-sub">/dice &lt;回数&gt; &lt;面数&gt;</a></p>
                                     <p>実行に必要な権限:<a class="info-sub">誰でも実行可能</a></p>
                                 </div>
                             </div>
