[EDIT] faq.html  質問・回答変更

--- a/faq.html
+++ b/faq.html
@@ -61,6 +61,14 @@
                     <p>ボットがオンラインかどうか確認をしてください。<br>また、コマンドがない場合は招待リンクを誤って入力している可能性があります。</p>
                 </div>
                 <div class="content">
+                    <h2>「アプリケーションが応答しませんでした。」と表示されます。</h2>
+                    <p>ボットがオンラインかどうか確認をしてください。<br>または、ボットがエラーにより落ちている可能性があります。管理者に報告してくださると嬉しいです。</p>
+                </div>
+                <div class="content">
+                    <h2>ステータス「Minecraftをプレイ中」とはどういうことですか？</h2>
+                    <p>現在ヒトリユウが運営しているマインクラフトサーバーのプラグインによるものです。その際、コマンドは応答しませんのでご注意ください。</p>
+                </div>
+                <div class="content">
                     <h2>ボットがオフラインです</h2>
                     <p>ボットがオンラインになるまで待ちましょう。いつか天から舞い降りてくることでしょう。</p>
                 </div>
